<resources>
    <string name="app_name">"Simposio "</string>

    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_carrito">Añadir al carrito</string>

    <string name="item_crearcuenta">Crear cuenta</string>
    <string name="item_pagos">Pagos</string>
    <string name="item_configuracion">Informes</string>
    <string name="item_inicio">Inicio</string>


    <string name="titulo_tab_platillos">PLATILLOS</string>
    <string name="titulo_tab_bebidas">BEBIDAS</string>
    <string name="titulo_tab_postres">POSTRES</string>

    <string name="titulo_tab_perfil">PERFIL</string>
    <string name="titulo_tab_direcciones">DIRECCIONES</string>
    <string name="titulo_tab_tarjetas">TARJETAS</string>

    <string name="texto_no_tarjetas">No tienes ninguna tarjeta asociada</string>


    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_info_usuario">Información del usuario</string>
    <string name="tech">Tecnologia</string>
    <string name="salud">Salud</string>
    <string name="bio">Bio</string>
    <string name="area">Definir</string>
    <string name="dia1">Dia1</string>
    <string name="dia2">Dia2</string>
    <string name="dia3">Dia3</string>
    <string name="des">Dentro del primer día se realiza la inaguración</string>
    <string name="des_dia2">Dentro del día dos</string>
    <string name="des_dia_3">Dentro del día3</string>
    <string name="simci">Simci 2017</string>


</resources>
