<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.simposio.activities.CategoriaBio">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/btndiauno_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="139dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="78dp"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btndiados_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia2"
        android:layout_alignBaseline="@+id/btndiauno_bio"
        android:layout_alignBottom="@+id/btndiauno_bio"
        android:layout_toRightOf="@+id/btndiauno_bio"
        android:layout_toEndOf="@+id/btndiauno_bio"
        android:textAllCaps="false"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp" />
    <Button
        android:id="@+id/btndiatres_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btndiados_bio"
        android:layout_marginEnd="15dp"
        android:textAllCaps="false"
        android:layout_marginRight="15dp"
        android:text="@string/dia3" />

    <TextView
        android:id="@+id/tv_dia1_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btndiauno_bio"
        android:layout_alignStart="@+id/btndiauno_bio"
        android:layout_below="@+id/btndiauno_bio"
        android:layout_marginTop="60dp"
        android:text="@string/des" />

    <TextView
        android:id="@+id/tv_dia2_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_dia1_bio"
        android:layout_alignStart="@+id/tv_dia1_bio"
        android:layout_below="@+id/tv_dia1_bio"
        android:layout_marginTop="43dp"
        android:text="@string/des_dia2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_dia2_bio"
        android:layout_alignStart="@+id/tv_dia2_bio"
        android:layout_below="@+id/tv_dia2_bio"
        android:layout_marginTop="52dp"
        android:text="@string/des_dia_3" />


</RelativeLayout>
