<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">



    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:fillColor="#FFFFFFFF"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp"/>

    <Button
        android:id="@+id/btn_Tecnologia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:text="@string/tech"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:layout_below="@+id/carouselView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnSalud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_Tecnologia"
        android:layout_toEndOf="@+id/btn_Tecnologia"
        android:layout_toRightOf="@+id/btn_Tecnologia"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:text="@string/salud" />

    <Button
        android:id="@+id/btnBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSalud"
        android:layout_toEndOf="@+id/btnSalud"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_toRightOf="@+id/btnSalud"
        android:text="@string/bio" />

    <Button
        android:id="@+id/btnArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnBio"
        android:layout_toEndOf="@+id/btnBio"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:layout_toRightOf="@+id/btnBio"
        android:text="@string/area" />


</RelativeLayout>